--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,38 @@
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
         <item name="colorOnPrimary">@color/colorSurface</item>
         <!-- Secondary brand color -->
-        <item name="colorSecondary">@color/colorAccent</item>
-        <item name="colorSecondaryVariant">@color/colorAccent</item>
+        <item name="colorSecondary">@color/colorPrimary</item>
+        <item name="colorSecondaryVariant">@color/colorPrimaryDark</item>
         <item name="colorOnSecondary">@color/colorSurface</item>
         <!-- Status bar color -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- Override default chip styles -->
+        <item name="chipStyle">@style/Widget.App.Chip</item>
+    </style>
+
+    <!-- Custom Chip Style to override purple defaults -->
+    <style name="Widget.App.Chip" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/colorBackground</item>
+        <item name="rippleColor">@color/colorPrimary</item>
+        <item name="chipStrokeColor">@color/colorPrimary</item>
+        <item name="chipStrokeWidth">1dp</item>
+        <item name="chipIconTint">@color/colorPrimary</item>
+    </style>
+
+    <!-- Custom Income Chip Style -->
+    <style name="Widget.App.Chip.Income">
+        <item name="chipBackgroundColor">@color/colorIncomeLight</item>
+        <item name="rippleColor">@color/colorIncomeDark</item>
+        <item name="chipStrokeColor">@color/colorIncomeDark</item>
+        <item name="chipIconTint">@color/colorIncomeDark</item>
+    </style>
+
+    <!-- Custom Expense Chip Style -->
+    <style name="Widget.App.Chip.Expense">
+        <item name="chipBackgroundColor">@color/colorExpenseLight</item>
+        <item name="rippleColor">@color/colorExpenseDark</item>
+        <item name="chipStrokeColor">@color/expense_category_stroke</item>
+        <item name="chipIconTint">@color/colorExpenseDark</item>
     </style>
 
     <!-- Settings-specific styles -->
