--- a/app/src/main/res/layout/dialog_budget.xml
+++ b/app/src/main/res/layout/dialog_budget.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true"
-    android:padding="24dp">
+    android:padding="24dp"
+    android:background="@color/colorBackground">
 
     <LinearLayout
         android:orientation="vertical"
