--- a/app/src/main/res/layout/dialog_transaction_options.xml
+++ b/app/src/main/res/layout/dialog_transaction_options.xml
@@ -7,7 +7,8 @@
     android:layout_marginStart="24dp"
     android:layout_marginEnd="24dp"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/colorBackground">
 
     <!-- Dialog title -->
     <TextView
