--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,6 +14,19 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="24dp">
 
+        <!-- Title -->
+        <TextView
+            android:id="@+id/tvPageHeading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="16dp"
+            android:text="Settings"
+            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
+            android:textColor="@color/textPrimary"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <!-- 1. Categories Section -->
         <TextView
@@ -27,7 +40,7 @@
             android:text="Categories"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tvPageHeading" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardCategories"
