--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -27,9 +27,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/circle_background"
-                android:padding="12dp"
                 android:gravity="center"
                 android:textSize="24sp"
+                android:includeFontPadding="false"
+                android:textAlignment="center"
+                android:layout_gravity="center"
                 android:contentDescription="Category icon" />
         </FrameLayout>
 
